# codal-mbedos

./: CMakeLists.txt  README.md  create_codal_target.py  gen-softdevice-o.sh
GENERIC_F103RE/inc/mbed-os/: mbed.h  mbed_config.h
GENERIC_F103RE/inc/mbed-os/events/: mbed_events.h
NRF52840_DK/inc/: mbed.h
NRF52840_DK/inc/cmsis/TARGET_CORTEX_M/: cmsis_armcc.h  cmsis_armclang.h  core_armv8mbl.h  core_armv8mml.h  core_cm23.h  core_cm33.h  core_cm7.h
NRF52840_DK/inc/drivers/: MbedCRC.h  SerialWireOutput.h  TableCRC.h  UARTSerial.h
NRF52840_DK/inc/events/: Event.h  EventQueue.h  mbed_events.h  mbed_shared_queues.h
NRF52840_DK/inc/events/equeue/: equeue_platform.h
NRF52840_DK/inc/features/filesystem/: Dir.h  File.h  FileSystem.h
NRF52840_DK/inc/features/lorawan/: LoRaRadio.h  LoRaWANBase.h  LoRaWANInterface.h  LoRaWANStack.h
NRF52840_DK/inc/features/netsocket/: CellularBase.h  NetworkStack.h  (+12 more)
NRF52840_DK/inc/hal/: itm_api.h
NRF52840_DK/inc/platform/: ATCmdParser.h  CriticalSectionLock.h  DeepSleepLock.h  DirHandle.h  FileBase.h  FileHandle.h  FileLike.h  FilePath.h  FileSystemHandle.h  FileSystemLike.h  LocalFileSystem.h  NonCopyable.h  ScopedLock.h  Stream.h  mbed_mktime.h  mbed_poll.h  mbed_power_mgmt.h
NRF52840_DK/inc/rtos/: ConditionVariable.h  EventFlags.h  Kernel.h  Mail.h  MemoryPool.h  Mutex.h  Queue.h  RtosTimer.h  Semaphore.h  Thread.h  rtos.h  rtos_idle.h
inc/: MbedI2C.h  MbedPin.h  MbedSPI.h  MbedSerial.h  MbedTimedInterruptIn.h  MbedTimer.h
source/: MbedI2C.cpp  MbedPin.cpp  MbedSPI.cpp  MbedSerial.cpp  MbedTimedInterruptIn.cpp  MbedTimer.cpp
(+319 files in other folders)
